# mchat

./: README.md  pyproject.toml
src/mchat/: chat.py  cli.py  commands.py  config.py  history.py  llm_client.py  schemas.py  session.py  task.py  tasks.py  tools.py  web_search.py
src/mchat/utils/: db.py
tests/: test_chat.py
