[project]
name = "mchat"
version = "0.1.0"
description = "A clean, fast terminal chat client for local LLMs"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
keywords = ["llm", "chat", "cli", "terminal"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "aiofiles>=24.1.0",
  "bs4>=0.0.2",
  "ddgs>=9.5.4",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "prompt-toolkit>=3.0.51",
  "pydantic>=2.11.7",
  "rich>=14.1.0",
]

[dependency-groups]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
mchat = "mchat.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mchat"]
